--- a/index.html
+++ b/index.html
@@ -12,14 +12,45 @@
             <div class="hero-content">
                 <img src="assets/Group.png" alt="image loading">
                 <h1 class="hero-heading">"In the near future, i hope to become a<br> developer."</h1>
-                <p>I want a full stack developer , and my main inspiration is that i love coding and i enjoy it.</p>
+                <p>I want a full stack developer , and my main inspiration is that i love coding and i enjoy it. <br>i will continue learning web development</p>
                 <button class="btn">Contact with me</button>
-    
         </section>
 
     </header>
 
     <main>
+        <div id="section2">
+            <div>
+                <h2>Why Web Development??</h2>
+                <p>in this genaration coding is the key of this modern world <br> So if we want to become an expert and maintain similarity we should learn coding</p>
+            </div>
+
+            <div>
+                <div>
+                    <h3>I will Do Coding and Change The World</h3>
+                    <p>I will try my best for this world and <br>also for my country</p>
+                    <button class="btn2">Learn More</button>
+                </div>
+                <img src="" alt="photo loading">
+            </div>
+            <div>
+                <img src="" alt="loading">
+                <div>
+                    <h3>I will help People by creating Modern Web System</h3>
+                    <p>I love helping people so if I become a developer <br>I will help people with my coding</p>
+                    <button class="btn2">Learn More</button>
+                </div>
+
+            </div>
+            <div>
+                <div>
+                    <h3>I will Do Coding and Change The World</h3>
+                    <p>I love coding ,It's my inspiration and my partner <br>without coding i am nothing</p>
+                    <button class="btn2">Learn More</button>
+                </div>
+                <img src="" alt="photo loading">
+            </div>
+        </div>
 
     </main>
     
