--- a/index.html
+++ b/index.html
@@ -20,36 +20,40 @@
 
     <main>
         <div id="section2">
-            <div>
-                <h2>Why Web Development??</h2>
-                <p>in this genaration coding is the key of this modern world <br> So if we want to become an expert and maintain similarity we should learn coding</p>
-            </div>
-
-            <div>
-                <div>
-                    <h3>I will Do Coding and Change The World</h3>
-                    <p>I will try my best for this world and <br>also for my country</p>
-                    <button class="btn2">Learn More</button>
-                </div>
-                <img src="" alt="photo loading">
-            </div>
-            <div>
-                <img src="" alt="loading">
-                <div>
-                    <h3>I will help People by creating Modern Web System</h3>
-                    <p>I love helping people so if I become a developer <br>I will help people with my coding</p>
-                    <button class="btn2">Learn More</button>
+            <div class="section2-content">
+                <div class="section2-heading">
+                    <h2>Why Web Development??</h2>
+                    <p>in this genaration coding is the key of this modern world <br> So if we want to become an expert and maintain similarity we should learn coding</p>
                 </div>
 
-            </div>
-            <div>
-                <div>
-                    <h3>I will Do Coding and Change The World</h3>
-                    <p>I love coding ,It's my inspiration and my partner <br>without coding i am nothing</p>
-                    <button class="btn2">Learn More</button>
+                <div class="content-div2">
+                    <div class="content-div3">
+                        <h3>I will Do Coding and Change The World</h3>
+                        <p>I will try my best for this world and <br>also for my country</p>
+                        <button class="btn2">Learn More</button>
+                    </div>
+                    <img src="assets/Layer_1.png" alt="photo loading">
                 </div>
-                <img src="" alt="photo loading">
+                <div class="content-div2">
+                    <img src="assets/Group 3.png" alt="loading">
+                    <div class="content-div3">
+                        <h3>I will help People by creating Modern Web System</h3>
+                        <p>I love helping people so if I become a developer <br>I will help people with my coding</p>
+                        <button class="btn2">Learn More</button>
+                    </div>
+
+                </div>
+                <div class="content-div2">
+                    <div class="content-div3">
+                        <h3>I will Do Coding and Change The World</h3>
+                        <p>I love coding ,It's my inspiration and my partner <br>without coding i am nothing</p>
+                        <button class="btn2">Learn More</button>
+                    </div>
+                    <img src="assets/Group 4.png" alt="photo loading">
+                </div>
+
             </div>
+                
         </div>
 
     </main>
